<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">assignment3</string>
    <string name="action_settings">Settings</string>
    <string name="title">Android Data Storage</string>
    <string name="pref_title">Preference Storage View</string>
    <string name="logo">spartan helmet</string>
    <string name="close">Close</string>
    <string name="pref">Preferences</string>
    <string name="sqlite">SQLite</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="book_name">Android Book Name</string>
    <string name="book_author_hint">Max. 70 Characters</string>
    <string name="book_author">Android Book Author</string>
    <string name="description">Description</string>
    <string name="description_hint">Max. 255 Characters</string>
     <string name="message">Message</string>

</resources>
