<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#33CCFF"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ActivityA" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="16dp"
        android:layout_toRightOf="@+id/imageView1"
        android:text="@string/title"
        android:textSize="18sp" />

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="8dp"
        android:contentDescription="@string/logo"
        android:src="@drawable/spartan" />

    <Button
        android:id="@+id/buttonClose_a"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="17dp"
        android:text="@string/close"
        android:onClick="closeActivity_a" />

    <Button
        android:id="@+id/buttonPrefs_a"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/imageView1"
        android:layout_below="@+id/imageView1"
        android:layout_marginTop="30dp"
        android:text="@string/pref"
        android:onClick="startPreferenceActivity_a"
        android:width="140dp" />

    <Button
        android:id="@+id/buttonSQLite_a"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/buttonPrefs_a"
        android:layout_alignBottom="@+id/buttonPrefs_a"
        android:layout_alignRight="@+id/buttonClose_a"
        android:text="@string/sqlite"
        android:onClick="startSQLiteActivity_a"
        android:width="140dp" />

    <ScrollView
        android:id="@+id/textDisplay_a"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/buttonClose_a"
        android:layout_alignLeft="@+id/buttonPrefs_a"
        android:layout_alignRight="@+id/buttonSQLite_a"
        android:layout_below="@+id/buttonPrefs_a" >
    </ScrollView>

</RelativeLayout>